src/objects/ObjectRelationshipMapping__c.object
<CustomObject>
    <fields>
        <fullName>ChildSurveyMapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Survey Mapping</label>
        <referenceTo>SurveyMapping__c</referenceTo>
        <relationshipName>Object_Relationship_Mappings_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSurveyMapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Survey Mapping</label>
        <referenceTo>SurveyMapping__c</referenceTo>
        <relationshipName>Object_Relationship_Mappings_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Object Relationship Mapping</label>
    <nameField>
        <label>Object Relationship Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Relationship Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>